# trcf_lms_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0de7596a9530_initial_schema.py  1f1873b73dd4_add_coupon_review_certificate_order_.py  847a12306f19_add_lesson_video_type.py  d03ea09c1d75_add_password_changed_at_and_token_.py
app/: database.py  email.py  main.py  models.py  pagination.py  rate_limit.py  security.py  utils.py
app/routers/: archive_categories.py  archives.py  auth.py  certificates.py  coupons.py  course_categories.py  courses.py  enrollments.py  lesson_progress.py  lessons.py  orders.py  payment_methods.py  reviews.py  sections.py  students.py  uploads.py  users.py
scripts/: seed_sample_content.py  seed_sample_course.py  smoke_test.py
tests/: test_coupons.py  test_jwt.py  test_utils.py
