[project]
name = "trcf-lms-backend"
version = "0.1.0"
description = "TRCF LMS backend API (FastAPI)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "pydantic[email]>=2.9.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
    "alembic>=1.18.4",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
